<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_legendas"
                style="@style/texto.DadosCliente"
                android:textSize="@dimen/t20"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legenda_statusoPddErp"
                style="@style/texto.legenda"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:src="@drawable/ic_maxima_em_processamento"
                    android:background="@drawable/shape_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusEmProcessamento"
                    style="@style/texto.legenda"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="!"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusRecusadoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="P"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_gray3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusPosicaoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="B"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_blue1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusPosicaoBloqueadoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="L"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_blue2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusPosicaoLiberadoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="M"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_green1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusPosicaoMontadoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="C"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_red"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusPosicaoCanceladoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido"
                    android:text="o"
                    android:textColor="@color/white"
                    android:gravity="center"
                    style="@style/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/t18"
                    android:background="@drawable/shape_gray2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_statusPosicaoOrcamentoErp"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <!-- critica -->
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_critica"
                style="@style/texto.legenda"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_aguardando_critica"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_criticaAguardandoRetorno"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_critica_sucesso"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_criticaSucesso"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_critica_alerta"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_criticaFalhaParcial"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="@dimen/dimenLegendaStatusPedido20"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape_red"
                    android:text="!"
                    style="@style/texto.legenda"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_criticaFalhaParcial"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <!-- Legendas -->
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_legendas"
                style="@style/texto.legenda"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_legenda_corte"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_sofreuCorte"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_legenda_falta"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_pedidoFalta"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_legenda_cancelamento"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_pedidoCancelado"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_legenda_devolucao"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_pedidoDevolucao"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/dimenLegendaStatusPedido"
                    android:layout_height="@dimen/dimenLegendaStatusPedido20"
                    android:src="@drawable/ic_maxima_legenda_telemarketing"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legenda_pedidoTelemarketing"
                    style="@style/texto.legenda"
                    android:lines="1"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/btnFechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_fechar"
        style="@style/texto"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:background="@drawable/background_card"
        android:textColor="@color/green2"
        android:stateListAnimator="@null"/>

</LinearLayout>