<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenWithCards">
        <include layout="@layout/appbar"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundCards"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">
                <TextView
                    android:id="@+id/lblDadosCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_dadosCliente"
                    style="@style/texto.DadosCliente.title"
                    android:textSize="18sp"
                    />
                <View
                    android:id="@+id/vwSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c7c7c7"
                    android:layout_below="@id/lblDadosCliente"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtRazaoSocial"
                    style="@style/texto.DadosCliente.title"
                    android:layout_below="@id/vwSeparator"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNomeFantazia"
                    style="@style/texto.DadosCliente.razaoSocial"
                    android:layout_below="@id/txtRazaoSocial"
                    android:paddingLeft="10dp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblCpf"
                    android:text="@string/strCPF"
                    style="@style/texto.DadosCliente.Labels"
                    android:layout_below="@id/txtNomeFantazia"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCpf"
                    style="@style/texto.DadosCliente"
                    android:layout_below="@id/txtNomeFantazia"
                    android:layout_toRightOf="@id/lblCpf"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblCnpj"
                    android:text="@string/strCNPJ"
                    style="@style/texto.DadosCliente.Labels"
                    android:layout_below="@id/lblCpf"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCnpj"
                    style="@style/texto.DadosCliente"
                    android:layout_below="@id/txtCpf"
                    android:layout_toRightOf="@id/lblCnpj"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblRamoAtividade"
                    android:text="@string/strRamoAtividade"
                    style="@style/texto.DadosCliente.Labels"
                    android:layout_below="@id/lblCnpj"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtRamoAtividade"
                    style="@style/texto.DadosCliente"
                    android:layout_below="@id/txtCnpj"
                    android:layout_toRightOf="@id/lblRamoAtividade"
                    android:textSize="12sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblEndereco"
                    android:text="@string/str_enderecos"
                    style="@style/texto.DadosCliente.Labels"
                    android:layout_below="@id/lblRamoAtividade"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEndereco"
                    style="@style/texto.DadosCliente"
                    android:layout_below="@id/txtRamoAtividade"
                    android:layout_toRightOf="@id/lblEndereco"
                    android:textSize="12sp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:background="@color/backgroundCards"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_contatos"
                    style="@style/texto.DadosCliente.title"
                    android:textSize="18sp"
                    />
                <View
                    android:id="@+id/contatosSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c7c7c7"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:id="@+id/rcContatos"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnVerificaStatusCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verificarStatusCliente"
            android:textAllCaps="false"
            style="@style/texto"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_green"
            android:layout_margin="5dp"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>